# ZeroLagMonitor

./: .gitignore  README.md  WINDOWS_CLIENT_ARCHITECTURE.md  test_sender.py
android_client/: build.gradle  settings.gradle
android_client/app/: CMakeLists.txt  build.gradle
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/cpp/: JNIBridge.cpp  MediaCodecDecoder.cpp  Receiver.cpp  Receiver.hpp
android_client/app/src/main/java/com/zerolag/monitor/: MainActivity.kt
android_client/app/src/main/res/drawable/: circle_ring.xml  ic_launcher_fill.xml
android_client/app/src/main/res/layout/: activity_main.xml
android_client/app/src/main/res/values/: ic_launcher_background.xml  themes.xml
installer/: ZeroLagMonitor.iss  prepare_redist.bat
windows_host/: CMakeLists.txt
windows_host/capture/: DXGICapture.cpp  DXGICapture.hpp
windows_host/encode/: AMFEncoder.cpp  AMFEncoder.hpp  EncoderFactory.cpp  EncoderFactory.hpp  IEncoder.hpp  MFEncoder.cpp  MFEncoder.hpp  NVENCEncoder.cpp  NVENCEncoder.hpp  QSVEncoder.cpp  QSVEncoder.hpp
windows_host/gpu/: GPUDetector.cpp  GPUDetector.hpp
windows_host/network/: AsyncSender.cpp  AsyncSender.hpp
windows_host/pipeline/: Pipeline.cpp
windows_host/ui/: WebUI.cpp  WebUI.hpp
